# whisper-hailo-8l-fastapi

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  download_resources.sh  pyproject.toml  setup.py
app/: .env  main.py
app/application/pipelines/: hailo_whisper_pipeline.py
app/application/services/: whisper_service.py
app/application/use_cases/: transcribe_audio_use_case.py
app/application/utils/: args_utils.py  audio_utils.py  hef_utils.py  record_utils.py
app/common/: wyoming_describe_response.json
app/infrastructure/api/: api_config.py  app_config.py  cors.py
app/infrastructure/api/endpoints/: backend_api.py  default_api.py  kitchen_api.py  whisper_api.py
app/infrastructure/api/responces/: default_codes.py  exceptions.py  models.py  templates.py
app/infrastructure/api/responces/auth_responces/: responses.py
app/infrastructure/common_functions/: postprocessing.py  preprocessing.py
app/infrastructure/config/: logging_config.json  logs_config.py  services_config.py  utils_config.py  whisper_hailo.py
app/infrastructure/tcp_server/: tcp_handler.py  whisper_hailo_event_handler.py  wyoming_tsp_server_config.py
app/infrastructure/wyoming/: responses.py
